# pyaccountant

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
plaid_quickstart/: server.py
plaid_quickstart/static/: style.css
src/pyaccountant/: __main__.py  defaults.ini  pyaccountant.py
src/pyaccountant/templates/: index.html
src/pyaccountant/utils/: options.py
test/pyaccountant/: test_init.py
