[metadata]
name = pyaccountant
version = 0.1.0
description = Make sense of my personal finances
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
include_package_data = True
packages = find:
package_dir = =src
install_requires =
    plaid-python
    flask

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyaccountant = pyaccountant.pyaccountant:main
